<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/cvTodayNewsCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minDate="01/01/1999"
            android:showWeekNumber="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvZipType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_all_files"
            app:layout_constraintEnd_toStartOf="@+id/rgDownloadZipType"
            app:layout_constraintTop_toBottomOf="@+id/cvTodayNewsCalendar" />

        <RadioGroup
            android:id="@+id/rgDownloadZipType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvZipType"
            app:layout_constraintEnd_toEndOf="@+id/cvTodayNewsCalendar"
            app:layout_constraintTop_toTopOf="@+id/tvZipType">

            <RadioButton
                android:id="@+id/rbWithPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/download_with_pic" />

            <RadioButton
                android:id="@+id/rbWithoutPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_without_pic" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>